tests/sksl/errors/ForTypeMismatch.glsl
### Compilation failed:

error: 2: expected 'bool', but found 'int'
1 error
